--- a/ansible_works/roles/https/files/apache.conf.j2
+++ b/ansible_works/roles/https/files/apache.conf.j2
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
     ServerName blogapp.nhom4
 
-    #Redirect permanent / https://blogapp.nhom4/
+    Redirect permanent / https://172.191.171.68/
 
     ProxyPass "/" "http://localhost:3030/"
     ProxyPassReverse "/" "http://localhost:3030/"
