--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -56,7 +56,7 @@
     </nav>
     <header class="masthead">
         <div class="container">
-            <div class="masthead-subheading">Welcome To Team04 Blog</div>
+            <div class="masthead-subheading">Welcome To nhom9 Blog</div>
             <div class="masthead-heading text-uppercase">HOPE IS A GOOD THING</div>
             <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/posts">SHOW POSTS</a>
         </div>
